# FEFlutterBEDjangoNinjaTemplate

./: .envrc.example  .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml
backend/api/: admin.py  api.py  models.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py
mobile/: pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/test/: sample_test.dart
